add 3 get routes
